samples/_failures_safe/1761070393_54bdab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f28a6a6a.c: In function ‘main’:
./samples/SAFE/__tmp_f28a6a6a.c:160:17: error: expected declaration or statement at end of input
  160 |                 printf("\n");
      |                 ^~~~~~
./samples/SAFE/__tmp_f28a6a6a.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f28a6a6a.c:160:17: error: expected declaration or statement at end of input
